# feather

./: .dockerignore  .drone.yml  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  Dockerfile  Dockerfile.linux  Dockerfile.linux-arm64  Dockerfile.windows  Dockerfile.windows_mxe  Dockerfile_appimage  Dockerfile_macos  Dockerfile_windows  HACKING.md  LICENSE  MAINTENANCE.md  Makefile  PKGBUILD  README.md  RELEASE.md  SECURITY.md
contrib/monero-seed/: CMakeLists.txt  README.md
src/: Application.cpp  Application.h  CMakeLists.txt  CalcWidget.cpp  CalcWidget.h  CalcWidget.ui  CalcWindow.cpp  CalcWindow.h  CalcWindow.ui  CoinsWidget.cpp  CoinsWidget.h  CoinsWidget.ui  ContactsWidget.cpp  ContactsWidget.h  ContactsWidget.ui  HistoryWidget.cpp  HistoryWidget.h  HistoryWidget.ui  MMSWidget.cpp  MMSWidget.h  MMSWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MorphTokenWidget.cpp  MorphTokenWidget.h  MorphTokenWidget.ui  ReceiveWidget.cpp  ReceiveWidget.h  ReceiveWidget.ui  SendWidget.cpp  SendWidget.h  SendWidget.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  SettingsNewDialog.cpp  SettingsNewDialog.h  SettingsNewDialog.ui  WindowManager.cpp  (+47 more)
src/api/: LocalMoneroApi.cpp  LocalMoneroApi.h
src/assets/: about.txt  ack.txt  contributors.txt  feather.desktop  macStylesheet.patch  nodes.json  org.featherwallet.feather.metainfo.xml  restore_heights_monero_mainnet.txt  restore_heights_monero_stagenet.txt  user_agents.txt
src/dialog/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AccountSwitcherDialog.cpp  AccountSwitcherDialog.h  AccountSwitcherDialog.ui  AddressCheckerIndexDialog.cpp  AddressCheckerIndexDialog.h  AddressCheckerIndexDialog.ui  AddressInfoDialog.ui  BalanceDialog.cpp  BalanceDialog.h  BalanceDialog.ui  BroadcastTxDialog.cpp  BroadcastTxDialog.h  BroadcastTxDialog.ui  CalcConfigDialog.cpp  CalcConfigDialog.h  ContactsDialog.cpp  ContactsDialog.h  ContactsDialog.ui  DebugInfoDialog.cpp  DebugInfoDialog.h  DebugInfoDialog.ui  DocsDialog.cpp  DocsDialog.h  DocsDialog.ui  HistoryExportDialog.cpp  HistoryExportDialog.h  HistoryExportDialog.ui  InfoDialog.cpp  InfoDialog.h  InfoDialog.ui  KeysDialog.cpp  KeysDialog.h  LegacySeedRecovery.cpp  LegacySeedRecovery.h  LegacySeedRecovery.ui  LocalMoneroInfoDialog.cpp  LocalMoneroInfoDialog.h  (+152 more)
src/libwalletqt/: AddressBook.cpp  AddressBook.h  AddressBookInfo.cpp  AddressBookInfo.h  CMakeLists.txt  Coins.cpp  Coins.h  CoinsInfo.cpp  CoinsInfo.h  ConstructionInfo.cpp  ConstructionInfo.h  Input.h  MultisigMessageStore.cpp  MultisigMessageStore.h  PassphraseHelper.cpp  PassphraseHelper.h  PendingTransaction.cpp  PendingTransaction.h  PendingTransactionInfo.cpp  PendingTransactionInfo.h  Ring.h  Subaddress.cpp  Subaddress.h  SubaddressAccount.cpp  SubaddressAccount.h  TransactionHistory.cpp  TransactionHistory.h  TransactionInfo.cpp  TransactionInfo.h  Transfer.h  UnsignedTransaction.cpp  UnsignedTransaction.h  Wallet.cpp  Wallet.h  WalletListenerImpl.cpp  WalletListenerImpl.h  WalletManager.cpp  WalletManager.h
src/model/: AddressBookModel.cpp  AddressBookModel.h  AddressBookProxyModel.cpp  AddressBookProxyModel.h  BountiesModel.cpp  BountiesModel.h  CCSModel.cpp  CCSModel.h  CoinsModel.cpp  CoinsModel.h  CoinsProxyModel.cpp  CoinsProxyModel.h  HistoryView.cpp  HistoryView.h  LocalMoneroModel.cpp  LocalMoneroModel.h  ModelUtils.cpp  ModelUtils.h  MultisigIncomingTxModel.cpp  MultisigIncomingTxModel.h  MultisigMessageModel.cpp  MultisigMessageModel.h  NodeModel.cpp  NodeModel.h  RedditModel.cpp  RedditModel.h  SubaddressAccountModel.cpp  SubaddressAccountModel.h  SubaddressModel.cpp  SubaddressModel.h  SubaddressProxyModel.cpp  SubaddressProxyModel.h  SubaddressView.cpp  SubaddressView.h  TransactionHistoryModel.cpp  TransactionHistoryModel.h  TransactionHistoryProxyModel.cpp  TransactionHistoryProxyModel.h  WalletKeysFilesModel.cpp  WalletKeysFilesModel.h  (+2 more)
src/monero_seed/: LICENSE.txt  README.md  galois_field.cpp  gf_elem.cpp  gf_elem.hpp  gf_poly.cpp  gf_poly.hpp  monero_seed.cpp  monero_seed.hpp  pbkdf2.c  pbkdf2.h  reed_solomon_code.cpp  reed_solomon_code.hpp  secure_random.cpp
src/openpgp/: CMakeLists.txt  hash.h  mpi.h  openpgp.cpp  openpgp.h  packet_stream.h  s_expression.h  serialization.h
src/plugins/: Plugin.h  PluginRegistry.h
src/polyseed/: pbkdf2.c  pbkdf2.h  polyseed.cpp  polyseed.h
src/qrcode/: QrCode.cpp  QrCode.h  QrCodeUtils.h
src/qrcode_scanner/: QrCodeScanDialog.cpp  QrCodeScanDialog.h  QrCodeScanner.cpp  QrCodeScanner.h  QrCodeUtils.cpp  QrCodeUtils.h  QrScanThread.cpp  QrScanThread.h
src/qrcode_scanner_qt6/: CMakeLists.txt  QrCodeScanDialog.cpp  QrCodeScanDialog.h  QrCodeScanDialog.ui  QrScanThread.cpp  QrScanThread.h
src/qrcode_utils/: QrCodeUtils.cpp
src/utils/: AppData.cpp  AppData.h  AsyncTask.h  ColorScheme.cpp  ColorScheme.h  EventFilter.cpp  EventFilter.h  FeatherSeed.h  Icons.cpp  Icons.h  MorphTokenApi.cpp  MorphTokenApi.h  NetworkManager.cpp  NetworkManager.h  Networking.cpp  Networking.h  RestoreHeightLookup.h  Seed.cpp  Seed.h  SemanticVersion.h  TorManager.cpp  TorManager.h  TxFiatHistory.cpp  TxFiatHistory.h  Updater.cpp  Updater.h  Utils.cpp  Utils.h  WebsocketClient.cpp  WebsocketClient.h  WebsocketNotifier.cpp  WebsocketNotifier.h  brute.cpp  brute.h  childproc.cpp  childproc.h  config.cpp  config.h  daemonrpc.cpp  daemonrpc.h  (+34 more)
src/widgets/: BountiesWidget.cpp  BountiesWidget.h  CCSEntry.h  CCSProgressDelegate.cpp  CCSProgressDelegate.h  CCSWidget.cpp  CCSWidget.h  LocalMoneroWidget.cpp  LocalMoneroWidget.h  LocalMoneroWidget.ui  MultisigSetupWidget.cpp  MultisigSetupWidget.h  MultisigSetupWidget.ui  NetworkProxyWidget.cpp  NetworkProxyWidget.h  NetworkProxyWidget.ui  NodeWidget.cpp  NodeWidget.h  NodeWidget.ui  PasswordSetWidget.cpp  PasswordSetWidget.h  PasswordSetWidget.ui  PayToEdit.cpp  PayToEdit.h  PluginWidget.cpp  PluginWidget.h  PluginWidget.ui  QrCodeWidget.cpp  QrCodeWidget.h  RedditPost.h  RedditWidget.cpp  RedditWidget.h  RestoreHeightWidget.cpp  RestoreHeightWidget.h  RestoreHeightWidget.ui  RevuoItem.h  RevuoWidget.cpp  RevuoWidget.h  (+43 more)
(+532 files in other folders)
